# school-robot

./: .gitignore  README.md
simulation_ws/: .rosinstall
simulation_ws/src/robot_drive/: package.xml  setup.py
simulation_ws/src/robot_drive/launch/: start_auto_robot.launch.py
simulation_ws/src/robot_drive/robot_drive/: rotate.py
