<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_drive</name>
  <version>0.0.1</version>
  <description>Robomaker sample for Robomaker book</description>
  <maintainer email="martinig@amazon.com">martinig</maintainer>
  <license>MIT-LICENSE</license>
  
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>gazebo</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
